--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -54,15 +54,15 @@
       <div class="indexcards">
         <p class="introsalud">
           <h2><u> Pandemia de informacion:</u></h2>
-          Nos encontramos frente a un mar inmenso de infrormacion acerca del Covid-19 y de los avances y descurbimientos de la ciencia sobre este tema.Para los curiosos que desean investigar todo acerca de este virus le recomendamos primero que se familiarize con algunos terminos que encontratra en todo texto relacionado a a este virus tan particular.
+          Nos encontramos frente a un mar inmenso de infrormacion acerca del Corona Virus  y de los avances y descurbimientos de la ciencia sobre este tema.Para los curiosos que desean investigar todo acerca de este virus le recomendamos primero que se familiarize con algunos terminos que encontratra en todo texto relacionado a a este virus tan particular.
         </p>
 
 
     <div class="indexcards">
-      <h3><u>Definiciones Importantes</u></h3>
+      <h3><u>Glosario</u></h3>
 
       <dl>
-        <dt><u>Virus</dt></u>
+        <dt><u>Virus</u></dt>
         <dd>
           Un virus es una partícula de código genético, ADN o ARN, encapsulada en una vesícula de proteínas. Los virus no se pueden replicar por sí solos. Necesitan infectar células y usar los componentes de la célula huésped para hacer copias de sí mismos. A menudo, el virus daña o mata a la célula huésped en el proceso de multiplicación. 
         </dd>
@@ -76,12 +76,21 @@
         </dd>
         <dt><u>Ensayo Clinico</u></dt>
         <dd>Son investigaciones de nuevos medicamentos o vacunas en las que los voluntarios -enfermos o personas sanas- pueden participar. En ellos, se prueban nuevos tratamientos o se comparan diferentes tipos de aplicación de tratamientos ya existentes. </dd>
-        <dt><u>Corona-Virus</dt></u>
+        <dt><u>Corona-Virus</u></dt>
         <dd>
         Es una extensa familia de virus que pueden causar enfermedades tanto en animales como en humanos. En los humanos, se sabe que varios coronavirus causan infecciones respiratorias que pueden ir desde el resfriado común hasta enfermedades más graves como el síndrome respiratorio de Oriente Medio (MERS) y el síndrome respiratorio agudo severo (SRAS). El coronavirus que se ha descubierto más recientemente causa la enfermedad por coronavirus COVID-19
         </dd>
+        <dt><u>Covid-19</u></dt>
+        <dd>
+          La COVID‑19 es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto este nuevo virus como la enfermedad que provoca eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019. Actualmente la COVID‑19 es una pandemia que afecta a muchos países de todo el mundo.
+        </dd>
+        <dt><u>Ventilación Mecánica</u></dt>
+        <dd>
+          La ventilación mecánica (VM) se conoce como todo procedimiento de respiración artificial que emplea un aparato para suplir o colaborar con la función respiratoria de una persona, que no puede o no se desea que lo haga por sí misma, de forma que mejore la oxigenación e influya así mismo en la mecánica pulmonar. El ventilador es un generador de presión positiva en la vía aérea que suple la fase activa del ciclo respiratorio (se fuerza la entrada de aire en la vía aérea central y en los alveolos).
+        </dd>
       </dl>
     </div>
+      </div>
   </section>
   <div style="float:left;width:50%;">
     <div style="padding-right:10px;">
@@ -99,29 +108,62 @@
     </div></div>
     
     <div style="clear: both;"></div>
-  <section class="introsalud">
+  <section>
     <div>
     <div class="indexcards">
       <p class="introsalud">
         <u> Investigacion Critica:</u>
-        Frente a la situacion de contingencia como uuarios de redes sociales y
+        Frente a la situacion de contingencia como usarios de redes sociales y
         medios de comunicacion nos vemos invadidos de informacion.Si te gustaria
         infromarte acerca de avances sobre la batalla de la ciencia contra el
-        Covid-19 aqui te dejamos algunos sitios para que puedas visitar.Ademas
-        recordemos que es sumamente importante que acudamos informacion lo mas
-        certera posible.
+        Corona-Virus, aqui te dejamos algunos sitios para que puedas visitar.Siempore recorda informarte de manera critica y analitica.
+
       </p>
       <ul class="list-unstyled">
-        <li class="media">
+        <li class="media my-4">
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_who.jpg?v=1589723656592"
+            class="mr-3"
+            alt="logo WHO"
+          />
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Organización Mundial de la Salud</h5>
+            
+            <a href="https://www.who.int/es" class="btn btn-dark">Ir</a>
+          </div>
+        </li>
+        <li class="media my-4">
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_descarga%20(1).jpg?v=1589723947119"
+            class="mr-3"
+            alt="logo OPS"
+          />
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Organización Panamericana de la Salud </h5>
+            
+            <a href="https://www.paho.org/es" class="btn btn-dark">Ir</a>
+          </div>
+        </li>
+        <li class="media my-4">
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_tn7gk3e6_400x400%20(2).png?v=1589729433019"
+            class="mr-3"
+            alt="logo NIL"
+          />
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Bibloteca Nacional de Medicina de EEUU </h5>
+            
+            <a href="https://www.paho.org/es" class="btn btn-dark">Ir</a>
+          </div>
+        </li>
+        <li class="media my-4">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_descarga.png?v=1589074371681"
             class="mr-3"
             alt="..."
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Revists Nature</h5>
-            Nature es una de las más prestigiosas revistas científicas a nivel
-            mundial
+            <h5 class="mt-0 mb-1">Revista Nature</h5>
             <a href="https://www.nature.com/" class="btn btn-dark">Ir</a>
           </div>
         </li>
@@ -133,10 +175,18 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1">Science</h5>
-            Science es una revista científica y órgano de expresión de la
-            American Association for the Advancement of Science (AAAS), la
-            Asociación Estadounidense para el Avance de la Ciencia.
             <a href="https://www.sciencemag.org/" class="btn btn-dark">Ir</a>
+          </div>
+        </li>
+        <li class="media my-4">
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_descarga_1.jpg?v=1589724222689"
+            class="mr-3"
+            alt="logo conicet"
+          />
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Conicet</h5>
+            <a href="https://www.nature.com/" class="btn btn-dark">Ir</a>
           </div>
         </li>
       </ul>
@@ -156,6 +206,7 @@
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
     </section>
+       </div>
+    </section>
   </body>
 </html>
-
