--- a/templates/listasuper.html
+++ b/templates/listasuper.html
@@ -36,7 +36,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -64,9 +66,10 @@
             <h5 class="mt-0 mb-1"><u>Vitaminas y Minerales</u></h5>
             Son los suplementos necesarios para todas las reacciones enizmaticas
             y metabolicas del organizmo.Sin ellas presentariamos diversas fallas
-            funiconales.la vitamica C por ejemplo se carcterija ¡ vel metus
-            scelerisque ante sollicitudin. Crasmentum nunc ac nisi vulputate
-            fringilla. Donec lacinia congue felis in faucibus.
+            funiconales.Se destacan el rol de la vitamina C y la D con la
+            rspuesta inmunitaria frente a las infecciones.Si bien existen
+            suplementos multivitaminicos, las fuentes naturales seran siempre
+            una mejor opcion
           </div>
         </li>
         <li class="media my-4">
@@ -77,10 +80,16 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Proteinas</u></h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-            vulputate fringilla. Donec lacinia congue felis in faucibus.
+            Sustancia química que forma parte de la estructura de las membranas
+            celulares y es el constituyente esencial de las células vivas; sus
+            funciones biológicas principales entre otras son la de actuar como
+            biocatalizador del metabolismo y la de actuar como anticuerpo por
+            esto es de suma importanica obtener proteinas de alto valor
+            biologico en nustra rutina. Se recomienda la ingesta de productos
+            naturales ya sean animales o vegetales aunque se requiere de un
+            correcto asesoramiento en este ultimo para que los requerimientos
+            diarios queden cubiertos.Si se optan por proteinas animales es
+            recomendable que sean lo mas magras posibles y variadas.
           </div>
         </li>
         <li class="media my-4">
@@ -91,10 +100,16 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Carbohidratos</u></h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-            vulputate fringilla. Donec lacinia congue felis in faucibus.
+            Son la fuente más importante de energía para su cuerpo. Su sistema
+            digestivo convierte estos hidratos de carbono en glucosa (azúcar en
+            la sangre). Su cuerpo usa esta azúcar como energía para sus células,
+            tejidos y órganos y guarda cualquier azúcar extra en su hígado y
+            músculos para cuando los necesite. Sin ellos no dispondriamos de la
+            energia necesaria para nuestro metabolismo basal.Es importante
+            destacar que se recomienda el consumo de granos integrales y
+            azucares lo menos refinados posibles , dado el impacto negativo que
+            tienen los aditivos y procesamientos quimicos sobre nuestro sistema
+            inmune.
           </div>
         </li>
         <li class="media my-4">
@@ -104,45 +119,71 @@
             alt="..."
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><u>Grasas Saludables</u></h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-            vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <h5 class="mt-0 mb-1"><u>Lipidos</u></h5>
+            Son un grupo muy amplio presente tanto en organsimos animales como
+            vegetales.Los lípidos cumplen funciones diversas en los organismos
+            vivientes, entre ellas la de reserva energética (como los
+            triglicéridos), estructural (como los fosfolípidos de las bicapas) y
+            reguladora (como las hormonas esteroides). Además, se les atribuye
+            la capacidad de ser aislantes naturales, ya que son malos
+            conductores del calor.Es de suma importanica destacar el rol de las
+            famosas "Grasas Saludables" , se ecuenctran en este grupo y son de
+            vital importanica ya que seran componentes de hormonas esecniales
+            para la vida .
           </div>
         </li>
       </ul>
 
       <div class="indexcards">
-     
-        <h2><u>Lista de Compras Inteligente</u>   <img
-          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_compras-de-supermercado-bolsas.jpg?v=1589486005333"
-          class="rounded"
-          width="70"
-          height="70"
-          alt=""
-        /> </h2>
+        <h2>
+          <u>Lista de Compras Inteligente</u>
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_compras-de-supermercado-bolsas.jpg?v=1589486005333"
+            class="rounded"
+            width="70"
+            height="70"
+            alt=""
+          />
+        </h2>
 
         <dl>
-          <dt><u>Frutas y Verduras</dt></u>
+          <dt><u>Frutas y Verduras</u></dt>
           <dd>
-            Frutas : citricos , manzana ,banana ,kiwi ,pera,arandoanos ,frutos
-            rojos higos Verduras: hojas verdes,tomate ,pimientos
-            ,remolacha,pepino ,bernejena calbaza
+            Seran las fuentes NATURALES de vitaminas y minerales.Algunas ideas
+            son: citricos(narnja mandarina pomelo-full vitamina C), manzana,
+            banana, kiwi, pera, arandoanos, frutos rojos, higos etc.Verduras:
+            hojas verdes, tomate, pimientos, remolacha, pepino, bernejena,
+            calabaza, rabanitos repollo. RECORDAR:mientras mas colores y
+            variedad consumamos de este grupo mejor
           </dd>
           <dt><u>Carnes y Lacteos</u></dt>
           <dd>
-            Animales: pechuga de pollo ,pescado , carne para mileanesas , cortes
-            para guisos Vegetales: soja, tofu ,seitan ,temphe ,quinoa ,lentejas
-            garbazos
+            Probablemnte seran nustra prinicpal fuente de proteinas ; Carnes:
+            vaca, pollo, pescado (atun, merluza, el que haya fresco ) y
+            cerdo(elejí distintos cortes magros), fiambres( no abusemos de su
+            consumo ya que los embutidos tienen muchos
+            conservantes).Lacteos:quesos, leche y yogurt(probiótico fundamental
+            para nuestro sistema inmune).No olvidarse de los huevos que contien
+            proteinas de alto valor biologico ademas de otros nustrientes
+            importantes. RECORDAR: aseguremosnos de tener los requermientos
+            protéicos abastecidos.
           </dd>
           <dt><u>Cereales y legumbres</u></dt>
           <dd>
-            Harina integral y blanca, legumbres,arroz,pastas ,cerelaes,
-            tuberuclos
+            Harinas integrales de todo tipo, avena y cereales
+            integrales.Legumbres (porotos, garbanzos, lentejas
+            etc).Pastas(ravioles, ñoquis, fiedeos).Pan , si no lo hacemos casero
+            busquemos uno con pocos aditivos y quimicos agregados preferentmente
+            de harinas poco refinadas RECORDAR: elijamos hidratos de carbono de
+            ALTA calidad nustricional
           </dd>
           <dt><u>Grasas Saludables</u></dt>
-          <dd>aceite de oliva, frutos secos,semillas,palta</dd>
+          <dd>
+            Aceite de oliva , semillas (chia, lino, girasol, sésamo etc), frutos
+            secos(mani, avellanas, nueces, castañas, pistacho etc), palta (alta
+            calidad nutricional)
+          </dd>
+          RECORDAR: fundamentales para el correcto funcionamiento del cuerpo
         </dl>
       </div>
     </section>
@@ -154,13 +195,14 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
     </section>
   </body>
 </html>
+
   
     
   
