--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -36,7 +36,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -46,38 +48,107 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jessica-lewis-vi6szzwgc34-unsplash.jpg?v=1589333623353);"
     >
       <h1>
-        Protocolos Covid-19
+        Protocolos de la Pandemia
       </h1>
     </div>
     <p class="introsalud">
       <u> Para tomar nota</u>
-      Aqui encontraras de forma secniclla informacion importante que deberias
+      Aqui encontraras de forma sencilla la información importante que deberías
       saber acerca de protoloclos, medidas de seguridad e higiene, restricciones
       y permisos entre otros anuncions liberados desde el gobierno de la Ciudad
       de Mendoza para el aisalemiento social preventivo y obligatorio.
     </p>
 
-
-
     <section>
-      <marquee  onmouseover="stop()" onmouseout="start()" scrolldelay="100" direction="left" crollamount="8" >
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm.jpg?v=1589393718590" class="traino img-thumbnail rounded" width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm1.jpg?v=1589393930468" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm2.jpg?v=1589393979368" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm4.jpg?v=1589395841570" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm5.jpg?v=1589395934391" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm6.jpg?v=1589396120562" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm7.jpg?v=1589396159926" class="traino img-thumbnail rounded"width="600" height="600">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm8.jpg?v=1589396173814" class="traino img-thumbnail rounded"width="600" height="600">
-       
-        </marquee>
+      <marquee
+        onmouseover="stop()"
+        onmouseout="start()"
+        scrolldelay="100"
+        direction="left"
+        crollamount="8"
+      >
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm.jpg?v=1589393718590"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm1.jpg?v=1589393930468"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          sec="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fcompras.jpg?v=1589747387162"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm2.jpg?v=1589393979368"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm4.jpg?v=1589395841570"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm5.jpg?v=1589395934391"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm6.jpg?v=1589396120562"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm7.jpg?v=1589396159926"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm8.jpg?v=1589396173814"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F3.jpg?v=1589747786849"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
 
+        <img
+        src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F6.jpg?v=1589747790506"
+        class="traino img-thumbnail rounded"
+        width="500"
+        height="500"
+      />
 
-
+      <img
+      src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F5.jpg?v=1589747791221"
+      class="traino img-thumbnail rounded"
+      width="500"
+      height="500"
+    />
+    <img
+    src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F4.jpg?v=1589747791503"
+    class="traino img-thumbnail rounded"
+    width="500"
+    height="500"
+  />
+      </marquee>
     </section>
-   
-            
-        
 
     <section class="footer">
       <div>
