--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -36,7 +36,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -152,7 +154,7 @@
             alt="logo quora"
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><u>Dejete llear</u></h5>
+            <h5 class="mt-0 mb-1"><u>Dejete llevar</u></h5>
             Si te enctanta interactr con gente y la cuarentna te lo impide Quora
             es tu lugar.Este sitio ofrece la oportunidad de charlar con gente
             alrededor de todo el mundo ,animate a preguntar y responder sobre
