--- a/templates/salud.html
+++ b/templates/salud.html
@@ -36,7 +36,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -132,3 +134,4 @@
     </section>
   </body>
 </html>
+
