--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -36,7 +36,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -52,7 +54,10 @@
     </div>
     <section class="indexcards">
       <p class="introsalud">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 " class="izquierda">
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
+          class="izquierda"
+        />
         Sin importar que nivel educativo estes transitando es importante que
         fomentemos el parendizaje en todo moemnto en nuestras cassas.La
         educacion a distancia es todo un desafio para una persona de cualquier
@@ -62,29 +67,49 @@
       </p>
     </section>
     <div class="indexcards">
-      <u></u><h2 class="margentitulos">Consejos utiles </h2></u>
+      <u><h2 class="margentitulos">Consejos utiles</h2></u>
 
       <dl class="margentitulos">
-        <dt>Conocimiento de la heramienta:</dt>
+        <dt><u>Conocimiento de la heramienta:</u></dt>
         <dd>
           Es sumamente necesario tener una buen conocmiento de la plataforma
           virtual que cada institución use.Familiarizarse con la herramienta de
-          comuicacion entre alumnos y porofesores y si tenes dudas o preguntas no tardes en pedir ayuda
+          comuicacion entre alumnos y porofesores y si tenes dudas o preguntas
+          no tardes en pedir ayuda
         </dd>
-        <dt>Organización</dt>
+        <dt><u>Organización</u></dt>
         <dd>
-          Si bien las clases no son presenciales resulta utli tener una rutina, ajustala a tus horarios pero la organizacion es clave para no atrasarse en las tareas.De este modo podras disfrutar de otras cosas que ademas te gusten.
+          Si bien las clases no son presenciales resulta útli tener una rutina,
+          ajustala a tus horarios pero la organización es clave para no
+          atrasarse en las tareas.De este modo podras disfrutar de otras cosas
+          que ademas te gusten.
         </dd>
-        <dt>Toma recreos</dt>
+        <dt><u>Toma recreos</u></dt>
         <dd>
-          Intercalá intervaos de estudio de no mas de 2 horas con recreos para descansar.Esta probado qeu son necesarios para asentar los conocimientos.
+          Intercalá intervaos de estudio de no mas de 2 horas con recreos para
+          descansar.Esta probado qeu son necesarios para asentar los
+          conocimientos.
         </dd>
-        <dt>Tecnologia</dt>
-        <dd>Nos guste o no la tecnologia es nuestro mejor aliado en esta circustancia,aprendamos a usarla , familiarizate con los programas de edcion de texto y otras presentaciones.Si te cuesta leer en computadora opta por imprimir los textos muy extensos para poder realizar las tareas que te pidan.
-          Frente a una situacion de exámen o clases virtuales asegurate de tener buena conectividad a una red Wifi y que tu computadora se encuentre en buen estado,en parte de un adecuado uso de la tecnologia dependera el deseempeño académico </dd>
-          <dt>Renovación</dt>
-          <dd>Aprovecha para aprender cosas nuevas aparte de lo estrictamente academico.Los idiomas son muy interesantes y hya gran variedad de modalidades a distancia, o podes optar por alguna espciazializacion que te interese.Todo es bienvenido a la hora de hacer crecer nuestros conocimientos</dd>
-        </dl>
+        <dt><u>Tecnología</u></dt>
+        <dd>
+          Nos guste o no la tecnologia es nuestro mejor aliado en esta
+          circustancia,aprendamos a usarla , familiarizate con los programas de
+          edcion de texto y otras presentaciones.Si te cuesta leer en
+          computadora opta por imprimir los textos muy extensos para poder
+          realizar las tareas que te pidan. Frente a una situacion de exámen o
+          clases virtuales asegurate de tener buena conectividad a una red Wifi
+          y que tu computadora se encuentre en buen estado,en parte de un
+          adecuado uso de la tecnologia dependera el deseempeño académico
+        </dd>
+        <dt><u>Renovación</u></dt>
+        <dd>
+          Aprovecha para aprender cosas nuevas aparte de lo estrictamente
+          academico.Los idiomas son muy interesantes y hya gran variedad de
+          modalidades a distancia, o podes optar por alguna espciazializacion
+          que te interese.Todo es bienvenido a la hora de hacer crecer nuestros
+          conocimientos
+        </dd>
+      </dl>
     </div>
 
     <section class="footer">
@@ -95,10 +120,11 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
     </section>
   </body>
 </html>
+
