--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -36,24 +36,26 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
       <div
         class="cover d-flex justify-content-center align-items-center flex-column"
-        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_martin-sanchez-ktmlsiscl7y-unsplash.jpg?v=1588770050773);"
+        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
       >
         <h1></h1>
       </div>
     </header>
     <section>
-      <p class="introsalud">
-        Trinidad Gonzalez Padin: 2944581418<br />
+      <p class="textoconta">
+        Trinidad Gonzalez Padin: 2944581418<br/>
 
         <img
-          src="https://image.shutterstock.com/image-photo/kazan-russia-october-27-2016-260nw-506008927.jpg"
-          class="img-thumbnail rounded"
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_2pic.jpg?v=1589739816737"
+          class="rounded-circle"
           width="80"
           height="80"
           alt=""
@@ -63,4 +65,5 @@
     </section>
   </body>
 </html>
+
 
