--- a/templates/entrenamiento.html
+++ b/templates/entrenamiento.html
@@ -18,70 +18,84 @@
     />
   </head>
   <body class="fondo">
-  <section class="indexcards"> 
-    <header>
-        <nav
-          class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-        >
-          <a class="navbar-brand" href="#">
-            <img
-              src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
-              class="rounded-circle"
-              width="60"
-              height="60"
-              alt=""
-            />
-          </a>
-          <ul >
-            <li class="nav-item active">
-              <a class="nav-link btn btn-dark" href="/">Inicio </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-        <div
+    <header class="fondos">
+      <nav
+        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
+      >
+        <a class="navbar-brand" href="#">
+          <img
+            src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
+            class="rounded-circle"
+            width="60"
+            height="60"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="nav-item active">
+            <a class="nav-link btn btn-dark" href="/">Inicio </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div
         class="cover d-flex justify-content-center align-items-center flex-column"
         style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_kelly-sikkema-be6k8sqt2fq-unsplash.jpg?v=1588798361384);"
       >
         <h1>
-          A Moverse en casa 
+          A Moverse en casa
         </h1>
-        <p class="tapanutri">Explora las actividades que te proponemos para moverte en casa</p>
-        
       </div>
-      </header>
-      <section>
-        <h3 style="padding-right: 0px;"><u>Ejercicios sencillos </u></h3>
-        <p> 
-          <div class="text-center">
-          <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_img-8012_1.jpg?v=1589334205928" class="traino img-thumbnail rounded">
-        </div>
+    </header>
+
+    <section class="indexcards">
+      <p class="introsalud">
+        <img
+          src=" https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_img-8012_1.jpg?v=1589334205928"
+          class="izquierda"
+          width="450"
+          height="450"
+        />
+        El ejercico es fundamental para la salud del organismo. Podes optar por
+        distintas actividades, te proponemos algunas ideas y lugares que podes
+        visitra para inspirarte y sacar tu mejor version.
+      </p>
+    </section>
+    <div class="indexcards">
+      <h3><u>Sitios recomedados:</u></h3>
+      <p>Gym Virtual</p>
+      <a href="http://gymvirtual.com/" class="btn btn-dark">Ir</a>
+      <p>Runtastic-Addidas</p>
+      <a
+        href="https://www.runtastic.com/blog/es/entrenar-en-casa-sin-equipamiento/ "
+        class="btn btn-dark"
+      >
+        Ir</a
+      >
+      <p>Mi gimasio en casa</p>
+      <a href="https://migymencasa.com/" class="btn btn-dark">Ir</a>
+      <p>Nerd Fitness</p>
+      <a href="https://www.nerdfitness.com/" class="btn btn-dark">Ir</a>
+      <p>Coach</p>
+      <a href="https://www.coachmag.co.uk/" class="btn btn-dark">Ir</a>
+    </div>
+
+    <section class="footer">
+      <div>
+        <!--Pie de pagina-->
+        <p
+          style="color:cornsilk"
+          ;
+          background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
+        >
+          Para mas informacion no dude en contactarse
         </p>
-      </section>
-      <section>
-      <h3> <u>Sitios recomedados</u></h3>
-      <p class="tapanutri"> Aqui te recomednamos algunos sitios que podes visitar para insipirarte y poder entrenar de manera mas personalizada:<br></p>
-      <p>Gym Virtual</p> <a href="http://gymvirtual.com/" class="btn btn-dark">Ir</a>
-      <p>Runtastic-Addidas </p> <a href="https://www.runtastic.com/blog/es/entrenar-en-casa-sin-equipamiento/ "class="btn btn-dark" > Ir</a>
-      <p> Mi gimasio en casa</p><a href="https://migymencasa.com/"class="btn btn-dark" >Ir</a>
-      </section>
-      </section>
-
-
-<section class="footer">
-  <div>
-    <!--Pie de pagina-->
-    <p
-      style="color:cornsilk"
-      ;
-      background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
-    >
-      Para mas informacion no dude en contactarse
-    </p>
-    <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
-  </div>
-</section>
-</body>
+        <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
+      </div>
+    </section>
+  </body>
 </html>
