--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,8 @@
   <body class="fondo">
     <header class="portadai">
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark " style="background-color: silver;"
+        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
+        style="background-color: silver;"
       >
         <a class="navbar-brand" href="#">
           <img
@@ -33,10 +34,12 @@
         </a>
         <ul>
           <li class="nav-item active">
-            <a class="nav-link btn btn-dark" href="/"> Inicio  </a>
+            <a class="nav-link btn btn-dark" href="/"> Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark " href="{{ url_for('contacto') }} "> Contacto</a>
+            <a class="nav-link btn btn-dark " href="{{ url_for('contacto') }} ">
+              Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -87,9 +90,7 @@
                   Lista de compras inteligentes,ejercicio y recomendaciones para
                   cuidar tu salud
                 </p>
-                <a href="{{ url_for('salud') }}" class="btn btn-dark"
-                  >Entrar</a
-                >
+                <a href="{{ url_for('salud') }}" class="btn btn-dark">Entrar</a>
               </div>
             </div>
           </div>
@@ -115,7 +116,7 @@
           <div class="col-12 col-sm-6   mt-2">
             <div class="card">
               <img
-                src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_marica-romeo-p65_u1f_od8-unsplash.jpg?v=1589333495827"
+                src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849"
                 class="card-img card-img-top"
                 alt="..."
               />
@@ -124,9 +125,7 @@
                 <p class="card-text">
                   Tips y expereincias para sobrellevar la cuarentena
                 </p>
-                <a href="{{ url_for('psico') }}" class="btn btn-dark"
-                  >Entrar</a
-                >
+                <a href="{{ url_for('psico') }}" class="btn btn-dark">Entrar</a>
               </div>
             </div>
           </div>
